--- a/middlewareLab.html
+++ b/middlewareLab.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
+       
 <head>
-
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src = middlewareLab.js></script>
     <title>Middleware Lab</title>
 </head>
 
@@ -14,12 +15,18 @@
     </div>
     <div id = 'random'>
         <h1>Random Number From Range</h1>
+        <label>Floor</label>
         <input type = 'number' id = 'floor'>
+        <label>Ceiling</label>
         <input type = 'number' id = 'ceil'>
         <button id = 'randNum'>Get Random Number</button>
     </div>
     <div id= 'Queue Manager'>
+        <h1>Queue Manager</h1>
         <input id = 'queue'>
+        <button id = 'peek'>Peek</button>
+        <button id = 'enqueue'>Enqueue</button>
+        <button id = 'dequeue'>Dequeue</button>
     </div>
 </body>
 
